Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@ body {background-color:lightblue;}
       <li><a href="https://sauzer77.github.io/jevendsdechosesdivers"> Divers</a></li>
       <li><a href="https://sauzer77.github.io/jevendsdechosesloisirs"> loisirs</a></li>
 
+<h2> Divers </h2>
+ 
+    
 
+<p></p> Ventilateur </p><br>
+ <a href="https://sauzer77.github.io/jevendsdeschosesventilateur/"> <img src="https://i.postimg.cc/CLt0ynHF/Sans-titre.jpg" width="150"height="200"><a/> 
  
    
 
@@ -58,3 +63,4 @@ body {background-color:lightblue;}
 
 </body>
 </html>
+
